<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="base.pace.myapplication.MainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bottomRL"
        android:layout_marginBottom="@dimen/listview_margin"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/bottomRL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_layout_height"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/clearTabButton"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_name"
                    android:textSize="@dimen/font_size" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bioTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_bio"
                    android:textSize="@dimen/font_size" />

                <EditText
                    android:id="@+id/bioEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addTabButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_toStartOf="@+id/clearTabButton"
            android:text="@string/add_tab" />

        <Button
            android:id="@+id/clearTabButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/view_margin"
            android:text="@string/clear_tab" />

        <Button
            android:id="@+id/openTabButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_toEndOf="@+id/clearTabButton"
            android:text="@string/open_tab" />

    </RelativeLayout>

</RelativeLayout>
